TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/004-if-else-no-expression.min

if then
  print 1;
else
  print 2;
endif

